--- a/public/administrative.html
+++ b/public/administrative.html
@@ -45,25 +45,21 @@
                             </div>
                         </li>
                         <li><a href="map.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
- 
-                        <li><a href="login.html"><i class="far fa-sticky-note"></i> Login</a></li>
-                    </ul>
-                    <!-- <div class="site-header-lang sp-hide">
-                        <a href="/page/contextpage_tem.html" target="_blank"><i class="far fa-file-alt"></i> go out side
-                            <i class="fas fa-fw fa-external-link-alt"></i></a>
-                    </div> -->
 
+                        
+                    </ul>
                     <div class="site-header-menu">
                         <div class="menu-toggle toggle-switch"><i class="fas fa-bars"></i><i class="fas fa-times"></i>
                         </div>
                         <div class="menu-cont toggle-cont" id="menu-nav"></div>
                     </div>
                     <div class="site-header-search">
-                        <div class="search-toggle toggle-switch2">&nbsp;<i class="fas fa-book"></i>&nbsp;Library&nbsp;<i class="fas fa-search"></i>&nbsp;</div>
+                        <div class="search-toggle toggle-switch2">&nbsp;<i class="fas fa-book"></i>&nbsp;Library&nbsp;<i
+                                class="fas fa-search"></i>&nbsp;</div>
                         <div class="search-cont toggle-cont2" style="z-index: 100;">
                             <div class="dummy"></div>
                             <div class="search-cont-wrap">
-                                <form method="get" action="search.html">
+                                <form method="get" action="library.html">
                                     <input class="search-input" type="text" placeholder="search book" name="q" value="">
                                     <button class="search-submit fade" type="submit">search</button>
                                 </form>
@@ -96,74 +92,76 @@
                     <header class="a-01">
                         <h2 class="tt ft36">Administrative Unit</h2>
                     </header><!-- /.a-01 --> <!-- .j-12b -->
-                    <table  class="table table-bordered table-hover">
+                    <table class="table table-bordered table-hover">
                         <thead>
                             <tr>
-                                <td  colspan="2" class="bg-blue2"><h5 class="text-white">Program Office</h5></td>
+                                <td colspan="2" class="bg-blue2">
+                                    <h5 class="text-white">Program Office</h5>
+                                </td>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                            <td width="80%">Diploma in College Foundation Studies</td>
-                            <td><a href="mailto:dcfs@hkit.edu.hk">dcfs@hkit.edu.hk</a></td>
+                                <td width="80%">Diploma in College Foundation Studies</td>
+                                <td><a href="mailto:dcfs@hkit.edu.hk">dcfs@hkit.edu.hk</a></td>
                             </tr>
                             <tr>
                             <tr>
-                            <td width="80%">Diploma of Applied Education</td>
-                            <td><a href="mailto:dae@hkit.edu.hk">dae@hkit.edu.hk</a></td>
+                                <td width="80%">Diploma of Applied Education</td>
+                                <td><a href="mailto:dae@hkit.edu.hk">dae@hkit.edu.hk</a></td>
                             </tr>
                             <tr>
-                            <td width="80%">Diploma Yi Jin</td>
-                            <td><a href="mailto:yjdadmin@hkit.edu.hk">dyj@hkit.edu.hk</a></td>
+                                <td width="80%">Diploma Yi Jin</td>
+                                <td><a href="mailto:yjdadmin@hkit.edu.hk">dyj@hkit.edu.hk</a></td>
                             </tr>
                             <tr>
-                            <td>Higher Diploma in Business Administration</td>
-                            <td><a href="mailto:hdba@hkit.edu.hk">hdba@hkit.edu.hk</a></td>
+                                <td>Higher Diploma in Business Administration</td>
+                                <td><a href="mailto:hdba@hkit.edu.hk">hdba@hkit.edu.hk</a></td>
                             </tr>
                             <tr>
-                            <td>Higher Diploma in Information Technology (Computing)</td>
-                            <td><a href="mailto:hdc@hkit.edu.hk">hdc@hkit.edu.hk</a></td>
+                                <td>Higher Diploma in Information Technology (Computing)</td>
+                                <td><a href="mailto:hdc@hkit.edu.hk">hdc@hkit.edu.hk</a></td>
                             </tr>
                             <tr>
-                            <td>Higher Diploma in Information Technology (Cyber Security & Investigation)</td>
-                            <td><a href="mailto:hdcsi@hkit.edu.hk">hdcsi@hkit.edu.hk</a></td>
+                                <td>Higher Diploma in Information Technology (Cyber Security & Investigation)</td>
+                                <td><a href="mailto:hdcsi@hkit.edu.hk">hdcsi@hkit.edu.hk</a></td>
                             </tr>
                             <tr>
-                            <td>Higher Diploma in Health Care</td>
-                            <td><a href="mailto:hdhc@hkit.edu.hk">hdhc@hkit.edu.hk</a></td>
+                                <td>Higher Diploma in Health Care</td>
+                                <td><a href="mailto:hdhc@hkit.edu.hk">hdhc@hkit.edu.hk</a></td>
                             </tr>
                             <tr>
-                            <td>UWL - BA (Hons) Business Studies</td>
-                            <td><a href="mailto:uwlbs@hkit.edu.hk">uwlbs@hkit.edu.hk</a></td>
+                                <td>UWL - BA (Hons) Business Studies</td>
+                                <td><a href="mailto:uwlbs@hkit.edu.hk">uwlbs@hkit.edu.hk</a></td>
                             </tr>
                             <tr>
-                            <td>UWL - BSc (Hons) Cyber Security</td>
-                            <td><a href="mailto:uwlcs@hkit.edu.hk">uwlcs@hkit.edu.hk</a></td>
+                                <td>UWL - BSc (Hons) Cyber Security</td>
+                                <td><a href="mailto:uwlcs@hkit.edu.hk">uwlcs@hkit.edu.hk</a></td>
                             </tr>
                             <tr>
-                            <td>UWL - BA (Hons) Criminology, Policing and Forensics</td>
-                            <td><a href="mailto:uwlcpf@hkit.edu.hk">uwlcpf@hkit.edu.hk</a></td>
+                                <td>UWL - BA (Hons) Criminology, Policing and Forensics</td>
+                                <td><a href="mailto:uwlcpf@hkit.edu.hk">uwlcpf@hkit.edu.hk</a></td>
                             </tr>
                             <tr>
-                            <td>GU - BA (Hons) Business</td>
-                            <td><a href="mailto:gubbs@hkit.edu.hk">gubbs@hkit.edu.hk</a></td>
+                                <td>GU - BA (Hons) Business</td>
+                                <td><a href="mailto:gubbs@hkit.edu.hk">gubbs@hkit.edu.hk</a></td>
                             </tr>
                             <tr>
-                            <td>GU - BA (Hons) Hospitality, Tourism and Event Management</td>
-                            <td><a href="mailto:guhtem@hkit.edu.hk">guhtem@hkit.edu.hk</a></td>
+                                <td>GU - BA (Hons) Hospitality, Tourism and Event Management</td>
+                                <td><a href="mailto:guhtem@hkit.edu.hk">guhtem@hkit.edu.hk</a></td>
                             </tr>
                             <tr>
-                            <td>GU - BA (Hons) Accounting and Finance</td>
-                            <td><a href="mailto:guaf@hkit.edu.hk">guaf@hkit.edu.hk</a></td>
+                                <td>GU - BA (Hons) Accounting and Finance</td>
+                                <td><a href="mailto:guaf@hkit.edu.hk">guaf@hkit.edu.hk</a></td>
                             </tr>
                             <tr>
-                            <td>GU - BSc (Hons) Computing</td>
-                            <td><a href="mailto:guc@hkit.edu.hk">guc@hkit.edu.hk</a></td>
+                                <td>GU - BSc (Hons) Computing</td>
+                                <td><a href="mailto:guc@hkit.edu.hk">guc@hkit.edu.hk</a></td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
-                    <!-- /.j-12b -->
+                <!-- /.j-12b -->
             </section>
 
             <div class="f-01">
@@ -177,7 +175,7 @@
                     <div class="c-05b">
                         <div class="c-05b_wrap">
                             <table class="news-table">
-                                
+
                             </table>
                         </div>
                     </div>
@@ -258,7 +256,7 @@
     </div>
     <!-- /.site-wrapper -->
 
-        <script src="js/news.js"></script>
+    <script src="js/news.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/imagesloaded.pkgd.min.js"></script>
     <script src="js/masonry.pkgd.min.js"></script>
