--- a/public/library.html
+++ b/public/library.html
@@ -47,7 +47,7 @@
                         </li>
                         <li><a href="map.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
 
-                        <li><a href="login.html"><i class="far fa-sticky-note"></i> Login</a></li>
+                        
                     </ul>
                     <div class="site-header-menu">
                         <div class="menu-toggle toggle-switch"><i class="fas fa-bars"></i><i class="fas fa-times"></i>
@@ -55,8 +55,8 @@
                         <div class="menu-cont toggle-cont" id="menu-nav"></div>
                     </div>
                     <div class="site-header-search">
-                        <div class="search-toggle toggle-switch2">&nbsp;<i class="fas fa-book"></i>&nbsp;Library&nbsp;<i
-                                class="fas fa-search"></i>&nbsp;</div>
+                        <div class="search-toggle toggle-switch2">&nbsp;<i class="fas fa-book"></i>&nbsp;Library&nbsp;
+                            <i class="fas fa-search"></i>&nbsp;</div>
                         <div class="search-cont toggle-cont2" style="z-index: 100;">
                             <div class="dummy"></div>
                             <div class="search-cont-wrap">
