--- a/public/vision.html
+++ b/public/vision.html
@@ -45,13 +45,7 @@
                             </div>
                         </li>
                         <li><a href="map.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
- 
-                        <li><a href="login.html"><i class="far fa-sticky-note"></i> Login</a></li>
                     </ul>
-                    <div class="site-header-lang sp-hide">
-                        <a href="/page/contextpage_tem.html" target="_blank"><i class="far fa-file-alt"></i> go out side
-                            <i class="fas fa-fw fa-external-link-alt"></i></a>
-                    </div>
 
                     <div class="site-header-menu">
                         <div class="menu-toggle toggle-switch"><i class="fas fa-bars"></i><i class="fas fa-times"></i>
@@ -63,7 +57,7 @@
                         <div class="search-cont toggle-cont2" style="z-index: 100;">
                             <div class="dummy"></div>
                             <div class="search-cont-wrap">
-                                <form method="get" action="search.html">
+                                <form method="get" action="library.html">
                                     <input class="search-input" type="text" placeholder="search book" name="q" value="">
                                     <button class="search-submit fade" type="submit">search</button>
                                 </form>
