--- a/public/history.html
+++ b/public/history.html
@@ -45,8 +45,8 @@
                             </div>
                         </li>
                         <li><a href="map.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
- 
-                        <li><a href="login.html"><i class="far fa-sticky-note"></i> Login</a></li>
+
+                        
                     </ul>
                     <div class="site-header-menu">
                         <div class="menu-toggle toggle-switch"><i class="fas fa-bars"></i><i class="fas fa-times"></i>
@@ -54,11 +54,12 @@
                         <div class="menu-cont toggle-cont" id="menu-nav"></div>
                     </div>
                     <div class="site-header-search">
-                        <div class="search-toggle toggle-switch2">&nbsp;<i class="fas fa-book"></i>&nbsp;Library&nbsp;<i class="fas fa-search"></i>&nbsp;</div>
+                        <div class="search-toggle toggle-switch2">&nbsp;<i class="fas fa-book"></i>&nbsp;Library&nbsp;<i
+                                class="fas fa-search"></i>&nbsp;</div>
                         <div class="search-cont toggle-cont2" style="z-index: 100;">
                             <div class="dummy"></div>
                             <div class="search-cont-wrap">
-                                <form method="get" action="search.html">
+                                <form method="get" action="library.html">
                                     <input class="search-input" type="text" placeholder="search book" name="q" value="">
                                     <button class="search-submit fade" type="submit">search</button>
                                 </form>
@@ -93,7 +94,12 @@
                     </header><!-- /.a-01 --> <!-- .j-12b -->
                     <section class="j-12b">
                         <div class="j-12b_wrap">
-                            <p class="tx ft16">Hong Kong Institute of Technology (HKIT) dates back to 1997. It began as College of Info-Tech and became HKIT in October 2003 with the change of the English name . HKIT is the first institution in Hong Kong offering the same course in both full-time and part-time modes whilst allowing students to transfer between the two modes of study according to their employment situation. The school policies facilitate the students to continue their study whenever their employment situations allow.</p>
+                            <p class="tx ft16">Hong Kong Institute of Technology (HKIT) dates back to 1997. It began as
+                                College of Info-Tech and became HKIT in October 2003 with the change of the English name
+                                . HKIT is the first institution in Hong Kong offering the same course in both full-time
+                                and part-time modes whilst allowing students to transfer between the two modes of study
+                                according to their employment situation. The school policies facilitate the students to
+                                continue their study whenever their employment situations allow.</p>
                         </div>
                     </section>
                     <!-- /.j-12b -->
@@ -111,7 +117,7 @@
                     <div class="c-05b">
                         <div class="c-05b_wrap">
                             <table class="news-table">
-                                
+
                             </table>
                         </div>
                     </div>
@@ -192,7 +198,7 @@
     </div>
     <!-- /.site-wrapper -->
 
-        <script src="js/news.js"></script>
+    <script src="js/news.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/imagesloaded.pkgd.min.js"></script>
     <script src="js/masonry.pkgd.min.js"></script>
