--- a/public/prospective.html
+++ b/public/prospective.html
@@ -46,7 +46,7 @@
                         </li>
                         <li><a href="map.html"><i class="fas fa-map-marker-alt"></i> Map</a></li>
  
-                        <li><a href="login.html"><i class="far fa-sticky-note"></i> Login</a></li>
+                        
                     </ul>
                     <div class="site-header-menu">
                         <div class="menu-toggle toggle-switch"><i class="fas fa-bars"></i><i class="fas fa-times"></i>
@@ -58,7 +58,7 @@
                         <div class="search-cont toggle-cont2" style="z-index: 100;">
                             <div class="dummy"></div>
                             <div class="search-cont-wrap">
-                                <form method="get" action="search.html">
+                                <form method="get" action="library.html">
                                     <input class="search-input" type="text" placeholder="search book" name="q" value="">
                                     <button class="search-submit fade" type="submit">search</button>
                                 </form>
