--- a/public/admin_dashboard.html
+++ b/public/admin_dashboard.html
@@ -30,6 +30,10 @@
                 <p>Dashboard</p>
             </div>
             <div class="menu_item ">
+                <i class='bx bxs-dashboard'></i>
+                <a href="admin_book.html"><p>book</p></a>
+            </div>
+            <div class="menu_item ">
                 <i class='bx bx-book'></i>
                 <p>Subject</p>
             </div>
