--- a/public/admin_book.html
+++ b/public/admin_book.html
@@ -134,6 +134,10 @@
                     <option value="Mystery">Mystery</option>
                     <option value="Chapter book">Chapter book</option>
                   </select>
+                  <label>author name: </label>
+                  <input type="text" placeholder="author name">
+                  <label>description: </label>
+                  <input type="text" placeholder="description">
                 <input type="submit" id="booksubmit">
             </form>
 
